--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Games</string>
     <string name="name_2048">2048</string>
     <string name="name_peg">Peg</string>
-    <string name="name_help">Help</string>
+    <string name="name_scores">Scores</string>
+    <string name="name_settings">Settings</string>
     <string name="title_activity_menu">Menu</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
